@@ -1,3 +1,8 @@
+ags (0.7.16)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed uninitialized values in ags_ipatch_sf2_reader.c
+
 ags (0.7.15)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
